tests/ui/even_with_odd_with_override_nonmonotonic_reassign.stderr
error: previous assignment here
 --> tests/ui/even_with_odd_with_override_nonmonotonic_reassign.rs:8:5
  |
8 |     C = 0x0a,
  |     ^

error: discriminant value is already assigned
  --> tests/ui/even_with_odd_with_override_nonmonotonic_reassign.rs:13:5
   |
13 |     H, // 0x0a
   |     ^
